--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
+    "chrome-aws-lambda": "^10.1.0",
     "clsx": "^2.0.0",
     "next": "^14.0.0",
     "next-auth": "^5.0.0-beta.3",
     "postcss": "8.4.31",
+    "puppeteer": "^10.1.0",
+    "puppeteer-core": "^10.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
