--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
-    "chrome-aws-lambda": "^10.1.0",
+    "chrome-aws-lambda": "^6.0.0",
     "clsx": "^2.0.0",
     "next": "^14.0.0",
     "next-auth": "^5.0.0-beta.3",
     "postcss": "8.4.31",
-    "puppeteer": "^10.1.0",
-    "puppeteer-core": "^10.1.0",
+    "puppeteer-core": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
@@ -35,7 +34,8 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "puppeteer": "^21.5.1"
   },
   "engines": {
     "node": ">=18"
