--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@sparticuz/chromium": "^118.0.0",
+    "@sparticuz/chromium-min": "^118.0.0",
     "@tailwindcss/forms": "^0.5.6",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.1",
