--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.0.0",
     "next": "^14.0.0",
     "next-auth": "^5.0.0-beta.3",
+    "nodemailer": "^6.9.1",
     "postcss": "8.4.31",
     "puppeteer-core": "^6.0.0",
     "react": "18.2.0",
@@ -33,7 +34,7 @@
     "@types/bcrypt": "^5.0.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "prettier": "^3.0.3",
