--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
-    "seed": "node -r dotenv/config ./scripts/seed.js",
+    "seed": "node -r dotenv/config ./scripts/seed2.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@line/bot-sdk": "^8.0.1",
     "@sparticuz/chromium": "^118.0.0",
     "@sparticuz/chromium-min": "^118.0.0",
     "@tailwindcss/forms": "^0.5.6",
