--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "chrome-aws-lambda": "^6.0.0",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
     "next": "^14.0.0",
     "next-auth": "^5.0.0-beta.3",
     "nodemailer": "^6.9.1",
