--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-auth": "^5.0.0-beta.3",
     "nodemailer": "^6.9.1",
     "postcss": "8.4.31",
+    "puppeteer-autoscroll-down": "^2.0.0",
     "puppeteer-core": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
